# vidmerger

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  Taskfile.yml  vidmerger.nupkg  vidmerger.nuspec
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: install.yml  linter.yml  release.yml  rust.yml  test.yml
img/: demo.mkv
src/: args_parser.rs  cli.rs  cli.yaml  cmd.rs  config.rs  ffmpeg_args_factory.rs  helper.rs  local_args.rs  logger.rs  main.rs  merger.rs  remote_args_factory.rs  scaler.rs
src/commanders/: _cmd.rs  chapterer.rs  fps_adjuster.rs  fps_changer.rs  fps_reader.rs  merger.rs  mod.rs  scaler.rs  selector.rs
src/helpers/: io_helper.rs  mod.rs  str_helper.rs  vec_helper.rs
tests/: integration.rs
tools/: LICENSE.txt  VERIFICATION.txt
