[package]
authors = ["tgotwig <thomas@tgotwig.dev>"]
edition = "2021"
name = "vidmerger"
version = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
assert_cmd = "2.0.12"
clap = {version = "3.2.25", features = ["derive"]}
ctor = "0.1.26"
k9 = "0.11.6"
nanoid = "0.4.0"
path-slash = "0.1.5"
regex = "1"
stdext = "0.2.1"
system_shutdown = "3.0.0"
term-painter = "0.2.4"
which = "4.4.2"
