[package]
authors = ["tgotwig <thomas@tgotwig.dev>"]
edition = "2021"
name = "vidmerger"
version = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
assert_cmd = "2.0.12"
clap = {version = "4.0.0", features = ["derive"]}
ctor = "0.4.0"
k9 = "0.12.0"
lazy_static = "1.5.0"
nanoid = "0.4.0"
path-slash = "0.2.0"
regex = "1"
stdext = "0.3.0"
system_shutdown = "4.0.0"
term-painter = "0.4.0"
ureq = "3"
which = "7.0.0"
